# pawsnclaws-atx

./: .env.example  .gitignore  ARCHITECTURE.json  CLAUDE.md  CUsersbmoorpawsnclaws-atx.secrets  PROJECT_BRIEF.md  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/web/: .env.example  package-lock.json  package.json
apps/web/public/: manifest.json  sw.js
apps/web/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts  twitter-image.tsx
apps/web/src/app/about/: page.tsx
apps/web/src/app/admin/: error.tsx  page.tsx
apps/web/src/app/appreciation/: page.tsx
apps/web/src/app/blog/: page.tsx
apps/web/src/components/: AppLink.tsx  CampaignProgress.tsx  CityRepresentatives.tsx  ColonyMap.tsx  Countdown.tsx  FeatureCard.tsx  Footer.tsx  FormField.tsx  Header.tsx  Icons.tsx  ImpactCalculator.tsx  PetSpotlight.tsx  ScrollToTop.tsx  Search.tsx  ShareButtons.tsx  Skeleton.tsx  SkipLink.tsx  Testimonials.tsx  ThemeToggle.tsx
apps/web/src/config/: cities.ts  city.ts
apps/web/src/data/: charlotte-resources.ts  resources.ts  site-config.ts  stories.ts  ways-to-help.ts
apps/web/src/hooks/: index.ts  useAdminAuth.ts  useFormValidation.ts  useHydrated.ts
apps/web/src/lib/: email.ts  sanitize.ts  stripe.ts  supabase.ts  validations.ts
apps/web/supabase/: schema.sql
docs/: AGENT_COORDINATION.md  CITY_SETUP.md  CURRENT_STATE.md  DOCUMENTATION_ARCHITECTURE.md  PLAYBOOK.md  SESSION_LOG.md
supabase/: schema-fixed.sql  schema.sql
tools/: corporate-partnership-research.md  logo-prompts.md  ~$go-prompts.md
(+104 files in other folders)
