[project]
name = "pawsnclaws-atx"
version = "0.1.0"
description = "501(c)(3) nonprofit platform helping Austin's animals"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["packages/api/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
